# voicenote

./: .gitignore  config.py  config.yaml  formatter.py  main.py  onboarding.py  pyproject.toml  recorder.py  reminders.py  requirements.txt  run.bat  transcriber.py  writer.py
